src/objects/IMS_Audit_Fields__mdt.object
<CustomObject>
    <description>Custom metadata type to track what the ims audit fields are per country per sfdc object</description>
    <fields>
        <fullName>Admin_Profile_Name__c</fullName>
        <description>Field to track the profile names of the admins who are responsible for each country</description>
        <label>Admin Profile Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Role_Name__c</fullName>
        <description>Field to track the possible admin roles responsible for a given country</description>
        <label>Admin Role Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Fields_2__c</fullName>
        <label>Audit Fields 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Audit_Fields_3__c</fullName>
        <label>Audit Fields 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Audit_Fields_New__c</fullName>
        <description>Replacing the existing audit field with new field to overcome the character limit issue</description>
        <label>Audit Fields New</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Audit_Fields__c</fullName>
        <description>Audit field concatenated in format
;&lt;field1 api name&gt;;&lt;field 2 api name&gt;;</description>
        <label>Audit Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Stores all the country values</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>Dom Com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Stores the value of SFDC object name</description>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>IMS Audit Fields</label>
    <pluralLabel>IMS Audit Fields</pluralLabel>
</CustomObject>